--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -18,5 +18,14 @@
     </servlet-mapping>
 
 
+    <!-- 注册 -->
+    <servlet>
+        <servlet-name>reg</servlet-name>
+        <servlet-class>cn.bistu.bbs.servlet.RegisterServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>reg</servlet-name>
+        <url-pattern>/reg</url-pattern>
+    </servlet-mapping>
 
 </web-app>
